@@ -66,10 +66,10 @@ class WTF_EXPORT_PRIVATE_RTTI ArrayBufferView : public RefCounted<ArrayBufferVie
 
     virtual unsigned byteLength() const = 0;
 
-    WTF_EXPORT_PRIVATE virtual ~ArrayBufferView();
+    WTF_EXPORT_PRIVATE_NO_RTTI virtual ~ArrayBufferView();
 
   protected:
-    WTF_EXPORT_PRIVATE ArrayBufferView(PassRefPtr<ArrayBuffer>, unsigned byteOffset);
+    WTF_EXPORT_PRIVATE_NO_RTTI ArrayBufferView(PassRefPtr<ArrayBuffer>, unsigned byteOffset);
 
     inline bool setImpl(ArrayBufferView*, unsigned byteOffset);
 
@@ -119,7 +119,7 @@ class WTF_EXPORT_PRIVATE_RTTI ArrayBufferView : public RefCounted<ArrayBufferVie
         *numElements = std::min(remainingElements, *numElements);
     }
 
-    WTF_EXPORT_PRIVATE virtual void neuter();
+    WTF_EXPORT_PRIVATE_NO_RTTI virtual void neuter();
 
     // This is the address of the ArrayBuffer's storage, plus the byte offset.
     void* m_baseAddress;
